--- a/tilfeldigtrefakta.no/css/style.css
+++ b/tilfeldigtrefakta.no/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Noto Sans', sans-serif;
-    background-image: url("https://web01.usn.no/~239177/my%20own%20stuff/tilfeldigtrefakta.no//bilder/woods.jpg");
+    background-image: url("https://github.com/Sanaker/tilfeldig-tre-fakta/blob/main/tilfeldigtrefakta.no/bilder/woods.jpg?raw=true");
     background-repeat: no-repeat;
     background-size: cover;
     background-blend-mode: darken;
