--- a/tilfeldigtrefakta.no/css/style.css
+++ b/tilfeldigtrefakta.no/css/style.css
@@ -54,3 +54,10 @@ img {
 header {
   background-image: linear-gradient(black black);
 }
+
+footer {
+position: absolute;
+bottom: 0;
+width: auto;
+height: 2.5rem;
+}
