--- a/tilfeldigtrefakta.no/css/style.css
+++ b/tilfeldigtrefakta.no/css/style.css
@@ -68,10 +68,10 @@ width: auto;
 height: 2.5rem;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 600px) {
   body {
     font-family: 'Noto Sans', sans-serif;
-    background-image: url("https://github.com/Sanaker/tilfeldig-tre-fakta/blob/main/tilfeldigtrefakta.no/bilder/woods.jpg?raw=true");
+    background-image: url("https://github.com/Sanaker/tilfeldig-tre-fakta/blob/main/tilfeldigtrefakta.no/bilder/woods-phone.png?raw=true");
     background-repeat: no-repeat;
     background-size: cover;
     background-blend-mode: darken;
