--- a/tilfeldigtrefakta.no/css/style.css
+++ b/tilfeldigtrefakta.no/css/style.css
@@ -17,6 +17,7 @@ body {
 .topnav {
     background-color: none;
     overflow: hidden;
+    margin-bottom: 20px;
   }
   
   /* Style the links inside the navigation bar */
@@ -77,4 +78,40 @@ height: 2.5rem;
     background-blend-mode: darken;
     color: white;
 }
+.topnav {
+  background-color: none;
+  overflow: hidden;
 }
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 12px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: green;
+  color: white;
+}
+
+a.button {
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+
+  text-decoration: none;
+  color: white;
+  background-color: green;
+  padding: 10px;
+}}
